'清除编译报错'

--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -94,16 +94,16 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 
 .cm-prolist{
     padding: 0 .1rem; overflow: hidden;
-    .tl-item{ display: block; float: left; width: 1.725rem; margin-top: .1rem;}
-    .tl-item:nth-child(2n){ float: right;}
-    .tl-item:nth-child(1),.tl-item:nth-child(2){margin-top: 0;}
-    .tl-img{ display: block; height: 1.725rem; width: 1.725rem;}
-    .tl-title{ font-size: .13rem; line-height: .18rem; min-height: .36rem; display: -webkit-box; -webkit-box-orient:vertical;-webkit-line-clamp:2; text-overflow:ellipsis; overflow:hidden;}
-    .tl-price{ padding-top: .05rem; font-size: .16rem; color: @base;}
-    .tl-pun{ margin-right: .03rem; font-size: .12rem;}
-    .tl-info{ position: relative; padding: .1rem; background: #fff; border:1px solid #e5e5e5; border-top: none;}
-    .tl-new{ position: absolute; left: .1rem; top: 0; z-index: 1; width: .27rem;}
-    .tl-imgo{ position: relative;}
+    .pl-item{ display: block; float: left; width: 1.725rem; margin-top: .1rem;}
+    .pl-item:nth-child(2n){ float: right;}
+    .pl-item:nth-child(1),.pl-item:nth-child(2){margin-top: 0;}
+    .pl-img{ display: block; height: 1.725rem; width: 1.725rem;}
+    .pl-title{ font-size: .13rem; line-height: .18rem; min-height: .36rem; display: -webkit-box; -webkit-box-orient:vertical;-webkit-line-clamp:2; text-overflow:ellipsis; overflow:hidden;}
+    .pl-price{ padding-top: .05rem; font-size: .16rem; color: @base;}
+    .pl-pun{ margin-right: .03rem; font-size: .12rem;}
+    .pl-info{ position: relative; padding: .1rem; background: #fff; border:1px solid #e5e5e5; border-top: none;}
+    .pl-new{ position: absolute; left: .1rem; top: 0; z-index: 1; width: .27rem;}
+    .pl-imgo{ position: relative;}
     .pl-btime{ position: absolute; left: 0; bottom: 0; right: 0; padding: 0 .05rem; background: @base; color: #fff; font-size: .1rem;}
     &.lthree{
         padding: 0 0 0 .15rem;
