--- a/shopdemo/src/assets/css/theme.less
+++ b/shopdemo/src/assets/css/theme.less
@@ -1,8 +1,10 @@
 .theme-red{
     @red:#ff4444;
     @redsecond:#ff8855;
+    @redthree:#ff8855;
     .gb-c{ color: @red!important;}
     .gb-bgc{ background-color: @red!important;}
+    .gb-bgcs{background-color: @redsecond!important;}
     .gb-bdc{border-color:@red!important;}
     // .gb-ac{color: @red!important;}
 
@@ -37,8 +39,11 @@
 .theme-blackish{
     @blackish:#66c4aa;
     @blackishsecond:#def3ec;
+    @blackishthree:#82d0ba;
     .gb-c{ color: @blackish!important;}
     .gb-bgc{ background-color: @blackish!important;}
+    .gb-bgc2{ background-color: @blackishsecond!important;}
+    .gb-bgc3{ background-color: @blackishthree!important;}
     .gb-bdc{border-color:@blackish!important;}
 
     .gb-c-bdc{ color: @blackish!important;border-color:@blackish!important;}
