--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -34,6 +34,7 @@ html,body{ height: 100%; }
 .cff{ color: #fff;}
 .c{ color: @base;}
 .ymid{ transform: translateY(-50%); -webkit-transform: translateY(-50%); }
+.ovy{overflow-y: scroll;  -webkit-overflow-scrolling: touch;}
 
 input::-webkit-input-placeholder { color: #ccc;}
 textarea::-webkit-input-placeholder { color: #ccc;}
@@ -86,6 +87,7 @@ textarea::-webkit-input-placeholder { color: #ccc;}
     .active .cb-ico-mine{background-position: -.72rem -.24rem;}
     .active{ color: #333;}
     .cb-icon{ line-height: .24rem; font-size: .24rem; }
+    .active .cb-icon{color: @base;}
 }
 
 .cm-indicator{
