--- a/shopdemo/src/assets/css/theme.less
+++ b/shopdemo/src/assets/css/theme.less
@@ -4,7 +4,8 @@
     @redthree:#ff8855;
     .gb-c{ color: @red!important;}
     .gb-bgc{ background-color: @red!important;}
-    .gb-bgcs{background-color: @redsecond!important;}
+    .gb-bgc2{background-color: @redsecond!important;}
+    .gb-bgc3{background-color: @redthree!important;}
     .gb-bdc{border-color:@red!important;}
     // .gb-ac{color: @red!important;}
 
@@ -15,6 +16,7 @@
     // .gb-c-bgc{color: @red!important;background-color: @red!important;}
     // .gb-c-bgc-bdc{color: @red!important;border-color:@red!important;background-color: @red!important;}
     // .gb-bgc-bdc{background-color: @red!important;border-color:@red!important;}
+    .gb-bgc-bdc{background-color: @red!important;border-color:@red!important;}
 
     .gb-gradient{background:linear-gradient(180deg, @redsecond 0%, @red 100%)!important;}
 
@@ -47,6 +49,8 @@
     .gb-bdc{border-color:@blackish!important;}
 
     .gb-c-bdc{ color: @blackish!important;border-color:@blackish!important;}
+
+    .gb-bgc-bdc{background-color: @blackish!important;border-color:@blackish!important;}
 
     .gb-gradient{background:linear-gradient(180deg,@blackish 0%,#07ad7f 100%)!important;}
 }
