--- a/shopdemo/src/assets/css/theme.css
+++ b/shopdemo/src/assets/css/theme.css
@@ -8,11 +8,21 @@
 .theme-red .gb-bgc {
   background-color: #ff4444 !important;
 }
+.theme-red .gb-bgc2 {
+  background-color: #ff8855 !important;
+}
+.theme-red .gb-bgc3 {
+  background-color: #ff8855 !important;
+}
 .theme-red .gb-bdc {
   border-color: #ff4444 !important;
 }
 .theme-red .gb-c-bdc {
   color: #ff4444 !important;
+  border-color: #ff4444 !important;
+}
+.theme-red .gb-bgc-bdc {
+  background-color: #ff4444 !important;
   border-color: #ff4444 !important;
 }
 .theme-red .gb-gradient {
@@ -24,11 +34,21 @@
 .theme-blackish .gb-bgc {
   background-color: #66c4aa !important;
 }
+.theme-blackish .gb-bgc2 {
+  background-color: #def3ec !important;
+}
+.theme-blackish .gb-bgc3 {
+  background-color: #82d0ba !important;
+}
 .theme-blackish .gb-bdc {
   border-color: #66c4aa !important;
 }
 .theme-blackish .gb-c-bdc {
   color: #66c4aa !important;
+  border-color: #66c4aa !important;
+}
+.theme-blackish .gb-bgc-bdc {
+  background-color: #66c4aa !important;
   border-color: #66c4aa !important;
 }
 .theme-blackish .gb-gradient {
